# Flappy-Bird

./: .gitignore  CMakeLists.txt  main  main.c  main.h  tags
assets/: Sprite-0002.ase
